# LLaMA-Factory

./: .env.example  .env.local  .gitignore  README.md  config.ini  pyproject.toml
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  docker-compose.yml
app/modules/: webui.py
app/modules/llamafactory/: __init__.py  cli.py
app/modules/llamafactory/api/: app.py  chat.py  common.py
app/modules/llamafactory/chat/: base_engine.py  chat_model.py  hf_engine.py  sglang_engine.py  vllm_engine.py
app/modules/llamafactory/data/: __init__.py  collator.py  converter.py  data_utils.py  formatter.py  loader.py  mm_plugin.py  parser.py  template.py  tool_utils.py
app/modules/llamafactory/data/processor/: __init__.py  feedback.py  pairwise.py  pretrain.py  processor_utils.py  supervised.py  unsupervised.py
app/modules/llamafactory/eval/: evaluator.py  template.py
app/modules/llamafactory/extras/: constants.py  env.py  logging.py  misc.py  packages.py  ploting.py
app/modules/llamafactory/hparams/: data_args.py  finetuning_args.py  generating_args.py  model_args.py  parser.py  training_args.py
app/modules/llamafactory/model/: __init__.py  adapter.py  loader.py  patcher.py
app/modules/llamafactory/model/model_utils/: attention.py  checkpointing.py  embedding.py  kv_cache.py  liger_kernel.py  longlora.py  misc.py  moe.py  packing.py  quantization.py  rope.py  unsloth.py  valuehead.py  visual.py
app/modules/llamafactory/train/: callbacks.py  test_utils.py  trainer_utils.py  tuner.py
app/modules/llamafactory/train/dpo/: trainer.py  workflow.py
app/modules/llamafactory/train/kto/: trainer.py  workflow.py
app/modules/llamafactory/webui/: chatter.py  common.py  control.py  engine.py  interface.py  manager.py  runner.py
app/repo/: minio_client.py
app/services/: model_training_service.py
app/utils/: config.py
data/: dataset_info.json  interview_qgen_alpaca_en.json  motion_g_interview_dataset.json
play/: README.md  main.py
play/repo/: minio_client.py
play/utils/: config.py
test/: test_model_training_service.py
test/scripts/: dataset_load.py
(+18 files in other folders)
