[tool.poetry]
name = "app"
version = "0.1.0"
description = "model-train"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
license = "MIT"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.12"

# Core dependencies
torch = "^2.4.0"
torchvision = "^0.19.0"
transformers = ">=4.45.0,<=4.52.1,!=4.46.*,!=4.47.*,!=4.48.0,!=4.52.0"
datasets = ">=2.16.0,<=3.6.0"
accelerate = ">=0.34.0,<=1.7.0"
peft = ">=0.14.0,<=0.15.2"
trl = ">=0.8.6,<=0.9.6"
tokenizers = ">=0.19.0,<=0.21.1"
gradio = ">=4.38.0,<=5.30.0"
scipy = "*"
einops = "*"
sentencepiece = "*"
tiktoken = "*"
protobuf = "*"
uvicorn = "*"
fastapi = "*"
sse-starlette = "*"
matplotlib = ">=3.7.0"
fire = "*"
omegaconf = "*"
packaging = "*"
pyyaml = "*"
numpy = "<2.0.0"
pydantic = "<=2.10.6"
pandas = ">=2.0.0"
av = "*"
librosa = "*"
tyro = "<0.9.0"
minio = "^7.2.15"
pydantic-settings = "^2.9.1"
ray = {version = "^2.46.0", extras = ["train"]}



[tool.poetry.group.dev.dependencies]
# Dev/test tools
pytest = "^8.3.5"
ipdb = "^0.13.13"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.poetry.scripts]
model-train = "model_train.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
